--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,10 +2,10 @@ name: Deploy to DEV
 
 on:
   push:
-    branches: 
-      - 'dev/**'
+    branches:
+      - dev/**
   pull_request:
-      - 'dev/**'
+      - dev/**
 
 jobs:
 
